# OSBot

./: .env  .env.example  .gitignore  LICENSE.txt  README.md  bot.py  emoji-regex.txt  mkdocs.yml  pyproject.toml  requirements.txt  requirements2.txt  twitter_trans_script.js
docs/: index.md
src/plugins/os_bot_base/: __init__.py  apscheduler.py  backup.py  blacklist.py  config.py  consts.py  database.py  depends.py  exception.py  failover.py  infomation.py  load_balancing.py  logger.py  meta.py  notice.py  permission.py  plugin_manage.py  request.py  session.py  statistics.py  util.py
src/plugins/os_bot_bbq/: __init__.py  bbq.py  config.py
src/plugins/os_bot_bilibili/: __init__.py  bilibili.py  bilibili_patch.py  command.py  config.py  exception.py  logger.py
src/plugins/os_bot_broadcast/: __init__.py  broadcast.py  config.py
src/plugins/os_bot_data_statistics/: __init__.py  config.py
src/plugins/os_bot_echo/: __init__.py  config.py  echo.py  logger.py
src/plugins/os_bot_feedback/: __init__.py  config.py  feedback.py  model.py
src/plugins/os_bot_group_notice/: __init__.py  config.py  group_notice.py
src/plugins/os_bot_ob11/: __init__.py  config.py  ob11.py  withdraw.py
src/plugins/os_bot_qa/: __init__.py  config.py  qa.py
src/plugins/os_bot_rss_subscribe/: __init__.py  config.py
src/plugins/os_bot_shutup/: __init__.py  config.py  const.py  shut_up.py
tools/: emoji-enc-regex-test.py  full-test.txt  regular-test.txt
tools/emoji-15.0/: all-codes.txt
tools/emoji-tests-and-tools/: README.md  Regular Mixed String  filter-test.py
(+78 files in other folders)
